<resources>
    <string name="app_name">Reservation</string>
    <string name="log_in">Log in</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="welcome_to_a_very_fancy_restaurant">Welcome to a very fancy restaurant!!</string>
    <string name="please_fill_out_the_following_information">Please fill out the following information</string>
    <string name="name_of_reservation">Name of Reservation</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_reservation">Date (dd/mm/yy)</string>
    <string name="number_guests">Number of Guests</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_username_and_password">Please enter your username and password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="next">Next</string>

</resources>
